Fixed invalid footer placement on small pages

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,3 +28,10 @@ a:visited{
   cursor: pointer;
   text-align: center;
 }
+
+#app{
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
